@@ -29,6 +29,9 @@
  *
  * $Id$
  *
+ * X-1.15       Camiel Vanderhoeven                             02-MAR-2008
+ *      Natural way to specify large numeric values ("10M") in the config file.
+ *
  * X-1.14       Camiel Vanderhoeven                             13-JAN-2008
  *      Use determine_layout in stead of calc_cylinders.
  *
@@ -74,7 +77,7 @@
 
 CDiskRam::CDiskRam(CConfigurator * cfg, CSystem * sys, CDiskController * c, int idebus, int idedev) : CDisk(cfg,sys,c,idebus,idedev)
 {
-  byte_size = myCfg->get_int_value("size",512)*1024*1024;
+  byte_size = myCfg->get_num_value("size",512*1024*1024);
 
   CHECK_ALLOCATION(ramdisk = malloc((size_t)byte_size));
 
