@@ -30,6 +30,9 @@
  *
  * $Id$
  *
+ * X-1.21           Camiel Vanderhoeven                             02-MAR-2008
+ *      Natural way to specify large numeric values ("10M").
+ *
  * X-1.20           Camiel Vanderhoeven                             16-FEB-2008
  *      Added Symbios 53C810 controller.
  *
@@ -92,6 +95,17 @@
  * X-1.1		Brian Wheeler					3-FEB-2007
  *	Created this file.
  **/
+
+// Specifying values
+//
+// Numeric values can be specified as a number ("500"), as a number with a
+// suffix ("100K" = 102400), or as a fancy combination ("2G512M" = 2.5 G).
+//
+// Boolean values can be specified as "true"/"false", "yes"/"no", or "1"/"0".
+//
+// String-constants are best specified in double quotes ("string"). If the
+// string needs to contain double quotes, double the double quotes. 
+// ("One ""word"" in this string is quoted")
 
 // GUI
 //
@@ -197,8 +211,8 @@ sys0 = tsunami
       cdrom         = false;
 
       // if the file does not exist, it will be created if autocreate_size is set
-      // to the desired size of the disk in megabytes.
-      autocreate_size = 600; // MB
+      // to the desired size of the disk.
+      autocreate_size = 600M;
     }
     disk1.0 = file
     {
@@ -226,7 +240,7 @@ sys0 = tsunami
     // ramdisk: create a disk using a portion of host RAM
     disk1.1 = ramdisk 
     {
-      size = 10; // MB
+      size = 10M;
     }
   }
 
@@ -271,7 +285,7 @@ sys0 = tsunami
     }
     disk0.5 = ramdisk 
     {
-      size = 10; // MB
+      size = 10M;
     }
   }
 
@@ -285,10 +299,10 @@ sys0 = tsunami
     // line.
     //
     // Windows syntax:
-    // adapter = \Device\NPF_{F266CDC2-6BA2-43D8-8B00-1C468F737ED7}
+    // adapter = "\Device\NPF_{F266CDC2-6BA2-43D8-8B00-1C468F737ED7}"
     //
     // Linux syntax:
-    //adapter = eth0
+    //adapter = "eth0"
     
     //adapter = "\Device\NPF_{F266CDC2-6BA2-43D8-8B00-1C468F737ED7}";
 
